tests/error/errors_on_usage/if_not_defined.err
Error: Variable not defined (at $FILE:8:11)
  | 
6 |     if x:
7 |         y = 1
8 |     return y
  |            ^ `y` might be undefined ...

Note:
  | 
5 | def foo(x: bool) -> int:
6 |     if x:
  |        - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
